agent-gateway/agent-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-servers-route
  namespace: agent-core-infra
spec:
  parentRefs:
  - name: agentgateway-proxy
    namespace: agentgateway-system
  rules:
  - backendRefs:
    - name: mcp-servers-backend
      group: agentgateway.dev
      kind: AgentgatewayBackend
  matches:
    # Main MCP endpoint to connect to the MCP server
    - path:
        type: PathPrefix
        value: /sse
    # Path to access resouce server metadata
    - path:
        type: PathPrefix
        value: /.well-known/oauth-protected-resource/mcp
    # Path to access authorization server metadata
    - path:
        type: PathPrefix
        value: /.well-known/oauth-authorization-server/mcp
    # JWKS endpoint for token validation
    - path:
        type: PathPrefix
        value: /realms/master/protocol/openid-connect/certs
